--- a/the incident in Ravda.csproj
+++ b/the incident in Ravda.csproj
@@ -58,11 +58,47 @@
     <Compile Include="basement.Designer.cs">
       <DependentUpon>basement.cs</DependentUpon>
     </Compile>
+    <Compile Include="basement_door.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="basement_door.Designer.cs">
+      <DependentUpon>basement_door.cs</DependentUpon>
+    </Compile>
+    <Compile Include="broken door.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="broken door.Designer.cs">
+      <DependentUpon>broken door.cs</DependentUpon>
+    </Compile>
+    <Compile Include="burried_in_basement_end.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="burried_in_basement_end.Designer.cs">
+      <DependentUpon>burried_in_basement_end.cs</DependentUpon>
+    </Compile>
     <Compile Include="death_screen.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="death_screen.Designer.cs">
       <DependentUpon>death_screen.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ending 3.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ending 3.Designer.cs">
+      <DependentUpon>ending 3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ending2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ending2.Designer.cs">
+      <DependentUpon>ending2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="forest.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="forest.Designer.cs">
+      <DependentUpon>forest.cs</DependentUpon>
     </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -70,8 +106,20 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="map of ravda.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="map of ravda.Designer.cs">
+      <DependentUpon>map of ravda.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Strangers House.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Strangers House.Designer.cs">
+      <DependentUpon>Strangers House.cs</DependentUpon>
+    </Compile>
     <Compile Include="the_1_encounter.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -84,11 +132,32 @@
     <EmbeddedResource Include="basement.resx">
       <DependentUpon>basement.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="basement_door.resx">
+      <DependentUpon>basement_door.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="broken door.resx">
+      <DependentUpon>broken door.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="burried_in_basement_end.resx">
+      <DependentUpon>burried_in_basement_end.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="death_screen.resx">
       <DependentUpon>death_screen.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ending 3.resx">
+      <DependentUpon>ending 3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ending2.resx">
+      <DependentUpon>ending2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="forest.resx">
+      <DependentUpon>forest.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="map of ravda.resx">
+      <DependentUpon>map of ravda.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -100,6 +169,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Strangers House.resx">
+      <DependentUpon>Strangers House.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="the_1_encounter.resx">
       <DependentUpon>the_1_encounter.cs</DependentUpon>
     </EmbeddedResource>
@@ -145,6 +217,36 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\basement_killer-removebg-preview %281%29.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\basement killer with knife1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\blood_splatter-removebg-preview1.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\basement door1.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\broken door.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\dead basement killer with knife.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\forest.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\house.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\car.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\forest2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\map.PNG" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
